<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/magisk"
        android:icon="@drawable/ic_magisk_outline"
        android:title="@string/magisk"/>

    <item
        android:id="@+id/superuser"
        android:icon="@drawable/ic_superuser"
        android:title="@string/superuser"
        android:visible="false"/>

    <item
        android:id="@+id/modules"
        android:icon="@drawable/ic_extension"
        android:title="@string/modules"/>

    <item
        android:id="@+id/log"
        android:icon="@drawable/ic_bug_report"
        android:title="@string/log" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>
</menu>