<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/su_popup"
    tools:context=".superuser.RequestActivity"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:minWidth="350dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="?attr/colorBackgroundFloating">

    <TextView
        android:text="@string/su_request_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/request_title"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_weight="0"
            android:layout_marginEnd="10dp"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:maxWidth="300dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="?android:textColorPrimary"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:maxWidth="300dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="?android:textColorSecondary"
                android:id="@+id/package_name" />
        </LinearLayout>
    </LinearLayout>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeout"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_su_warning"
        android:textColor="?android:textColorSecondary"
        android:text="@string/su_warning"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:drawablePadding="10dp" />

    <LinearLayout
        style="?android:buttonBarStyle"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <Button
            style="?android:buttonBarButtonStyle"
            android:text="@string/deny_with_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deny_btn"
            android:layout_weight="1" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:text="@string/grant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grant_btn"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
