<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="?attr/cardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="7dp"
                    android:paddingTop="7dp">

                    <RelativeLayout
                        android:id="@+id/magisk_update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp">

                        <ImageView
                            android:id="@+id/magisk_update_icon"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/magisk_update_status"
                            android:visibility="gone" />

                        <ProgressBar
                            android:id="@+id/magisk_update_progress"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/magisk_update_status" />

                        <TextView
                            android:id="@+id/magisk_update_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:minWidth="225dp"
                            android:padding="6dp"
                            android:text="@string/checking_for_updates"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/magisk_status_icon"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/magisk_version" />

                        <TextView
                            android:id="@+id/magisk_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:minWidth="225dp"
                            android:padding="6dp"
                            android:textStyle="bold" />


                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/safetyNet_card"
                style="?attr/cardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/safetyNet_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/safetyNet_refresh"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_margin="15dp"
                            android:layout_toStartOf="@+id/safetyNet_status"
                            android:src="@drawable/ic_refresh" />

                        <ProgressBar
                            android:id="@+id/safetyNet_check_progress"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_margin="15dp"
                            android:layout_toStartOf="@+id/safetyNet_status"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/safetyNet_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:minWidth="175dp"
                            android:padding="6dp"
                            android:text="@string/safetyNet_check_text"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/expand_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/cts_status_icon"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginBottom="5dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="5dp" />

                            <TextView
                                android:id="@+id/cts_status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:minWidth="150dp"
                                android:padding="6dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/basic_status_icon"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="10dp" />

                            <TextView
                                android:id="@+id/basic_status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:minWidth="150dp"
                                android:padding="6dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/install_option_card"
                style="?attr/cardStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingBottom="10dp"
                        android:text="@string/advanced_settings_title"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/keep_force_enc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="50dp"
                        android:layout_marginStart="50dp"
                        android:text="@string/keep_force_encryption" />

                    <CheckBox
                        android:id="@+id/keep_verity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="50dp"
                        android:layout_marginStart="50dp"
                        android:text="@string/keep_dm_verity" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/install_button"
                style="?attr/cardStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="5dp"
                        app:srcCompat="@mipmap/ic_launcher_round" />

                    <TextView
                        android:id="@+id/install_text"
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/install"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/uninstall_button"
                style="?attr/cardStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/uninstall"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>